--- a/Weighted_voting_for_building_owners/OwnersVotingServer.csproj
+++ b/Weighted_voting_for_building_owners/OwnersVotingServer.csproj
@@ -117,6 +117,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OVServer.cs" />
+    <Compile Include="testData.cs" />
     <Compile Include="ClientViewModel.cs" />
     <Compile Include="CreateUserRequest.cs" />
     <Compile Include="OwnerEntry.cs" />
