each voting now has the positive and negative votes counted properly
this is now working just for the model sent from server, while doing
local modfications, the view model can cause bugs, will have to
investigate and fix it in the future

--- a/Weighted_voting_for_building_owners/OwnersVotingServer.csproj
+++ b/Weighted_voting_for_building_owners/OwnersVotingServer.csproj
@@ -56,8 +56,9 @@
     <Reference Include="Esent.Interop">
       <HintPath>..\packages\RavenDB.Database.1.0.960\lib\net40\Esent.Interop.dll</HintPath>
     </Reference>
-    <Reference Include="Fleck">
-      <HintPath>..\packages\Fleck.0.9.6.12\lib\net40\Fleck.dll</HintPath>
+    <Reference Include="Fleck, Version=0.9.6.13, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Fleck.0.9.6.13\lib\net40\Fleck.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.NRefactory">
       <HintPath>..\packages\RavenDB.Database.1.0.960\lib\net40\ICSharpCode.NRefactory.dll</HintPath>
